--- a/index.html
+++ b/index.html
@@ -206,10 +206,10 @@
       <div class="nav-scroller py-1 mb-3 border-bottom">
         <nav class="nav nav-underline justify-content-between">
           <a class="nav-item nav-link link-body-emphasis active" href="#">Iphone's World</a>
-          <a class="nav-item nav-link link-body-emphasis" href="../Bootstrap.html/Iphone.html">Home</a>
-          <a class="nav-item nav-link link-body-emphasis" href="../Bootstrap.html/iphonelist.html"> Recently Lanuched</a>
-          <a class="nav-item nav-link link-body-emphasis" href="../Bootstrap.html/team.html">Our Team</a>
-          <a class="nav-item nav-link link-body-emphasis" href="../shinchan.html/vimalcontact.html">About</a>
+          <a class="nav-item nav-link link-body-emphasis" href="index.html">Home</a>
+          <a class="nav-item nav-link link-body-emphasis" href="iphonelist.html"> Recently Lanuched</a>
+          <a class="nav-item nav-link link-body-emphasis" href="team.html">Our Team</a>
+          <a class="nav-item nav-link link-body-emphasis" href="vimalcontact.html">About</a>
 
          
 
@@ -241,7 +241,7 @@
                 <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
               </a>
             </div>
-           <img src="../../../images1/steve jobs.jpg" width="100%" height="100%">
+           <img src="images1/steve jobs.jpg" width="100%" height="100%">
           </div>
         </div>
         <div class="col-md-6">
