--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
               </a>
             </div>
-            <img src="../../../images1/steve gary.jpg" width="100%" height="100%">
+            <img src="images1/steve gary.jpg" width="100%" height="100%">
           </div>
         </div>
       </div>
@@ -384,14 +384,14 @@
               <ul class="list-unstyled">
                 <li>
                   
-                        <img src="../../../images1/iphone4.jpg" width="100%" height="100%">
+                        <img src="images1/iphone4.jpg" width="100%" height="100%">
                       <h6 class="mb-0">Iphones 14Pro Max</h6>
                       <small class="text-body-secondary">7th Sep 2022</small>
                     </div>
                   </a>
                 </li>
                 <li>
-                    <img src="../../../images1/iphone5.jpg" width="100%" height="100%">
+                    <img src="images1/iphone5.jpg" width="100%" height="100%">
                       <h6 class="mb-0">Iphone 13Pro Max</h6>
                       <small class="text-body-secondary">14th sep 2021</small>
                     </div>
@@ -429,7 +429,7 @@
     </main>
     
     <footer class="py-5 text-center text-body-secondary bg-body-tertiary">
-      <p>Designed  <a href="#"></a> by <a href="../shinchan.html/vimalcontact.html">HACKER DEVELOPER VIMAL</a>.</p>
+      <p>Designed  <a href="#"></a> by <a href="vimalcontact.html">HACKER DEVELOPER VIMAL</a>.</p>
       <p class="mb-0">
         <a href="#">Back to top</a>
       </p>
