--- a/iphonelist.html
+++ b/iphonelist.html
@@ -214,7 +214,7 @@
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
               <div class="card shadow-sm">
-               <img src="../.././../images1/iphone4.jpg">
+               <img src="images1/iphone4.jpg">
 
 
 
@@ -249,7 +249,7 @@
             <div class="col">
               <div class="card shadow-sm">
 
-                <img src="../../../images1/14 pro.jpg">
+                <img src="images1/14 pro.jpg">
 
                 <div class="card-body">
                   <div class="spec">
@@ -283,7 +283,7 @@
             <div class="col">
               <div class="card shadow-sm">
 
-                 <img src="../../../images1/13 pro max1.jpg">
+                 <img src="images1/13 pro max1.jpg">
 
                 <div class="card-body">
 <div class="spec">
@@ -317,7 +317,7 @@
             <div class="col">
               <div class="card shadow-sm">
 
-                <img src="../../../images1/extra.jpg">
+                <img src="images1/extra.jpg">
 
                 <div class="card-body">
                   <div class="spec">
@@ -351,7 +351,7 @@
             <div class="col">
               <div class="card shadow-sm">
 
-                <img src="../../../images1/14 pro max 1.jpg">
+                <img src="images1/14 pro max 1.jpg">
 
                 <div class="card-body">
                   <div class="spec">
@@ -387,7 +387,7 @@
             <div class="col">
               <div class="card shadow-sm">
 
-                <img src="../../../images1/12 pro.jpg">
+                <img src="images1/12 pro.jpg">
 
                 <div class="card-body">
 <div class="spec">
@@ -424,7 +424,7 @@
             <div class="col">
               <div class="card shadow-sm">
 
-                <img src="../../../images1/xr.jpg">
+                <img src="images1/xr.jpg">
 
                 <div class="card-body">
                   <div class="spec">
@@ -460,7 +460,7 @@
             <div class="col">
               <div class="card shadow-sm">
 
-                <img src="../../../images1/13 pro 1.jpg">
+                <img src="images1/13 pro 1.jpg">
 
                 <div class="card-body">
                   <div class="spec">
@@ -496,7 +496,7 @@
             <div class="col">
               <div class="card shadow-sm">
 
-                <img src="../../../images1/14 pro 1.jpg">
+                <img src="images1/14 pro 1.jpg">
 
                 <div class="card-body">
                   <div class="spec">
@@ -541,7 +541,7 @@
         
         <br>
         <br>
-    <div class="foot">   <p>Designed  <a href="#"></a> by <div class="footvimal">😈😈😈<a href="../shinchan.html/vimalcontact.html" class="footvimal">HACKER DEVELOPER VIMAL</a>.😈😈😈</p></div>      
+    <div class="foot">   <p>Designed  <a href="#"></a> by <div class="footvimal">😈😈😈<a href="vimalcontact.html" class="footvimal">HACKER DEVELOPER VIMAL</a>.😈😈😈</p></div>      
        
         </div>
         <p class="mb-0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">New to Apple? </font></font><a href="/"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><a href="www.apple mobiles.com">Visit the homepage</a></font></font></a><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> </font></font><a href="/docs/5.3/getting-started/introduction/ "><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></a><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> .</font></font></p>
